--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,4 +23,9 @@
         android:layout_height="wrap_content"
         android:text="" />
 
+    <com.github.mikephil.charting.charts.LineChart
+        android:id="@+id/linechart"
+        android:layout_width="match_parent"
+        android:layout_height="400dp"></com.github.mikephil.charting.charts.LineChart>
+
 </LinearLayout>
