--- a/app/src/main/res/layout/activity_formulario.xml
+++ b/app/src/main/res/layout/activity_formulario.xml
@@ -19,7 +19,7 @@
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="textEmailAddress"
+                android:inputType="text"
                 android:ems="10"
                 android:id="@+id/nombre"
                 android:layout_alignParentTop="true"
@@ -31,7 +31,7 @@
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="textPassword"
+                android:inputType="text"
                 android:ems="10"
                 android:id="@+id/apellidos"
                 android:layout_below="@+id/nombre"
@@ -47,7 +47,7 @@
                 android:layout_marginTop="10dp"
                 android:layout_below="@+id/apellidos"
                 android:id="@+id/textview_fecha"
-                android:text="Fecha:" />
+                android:text="Fecha de nacimiento:" />
 
             <EditText
                 android:id="@+id/editTextFecha"
@@ -60,7 +60,7 @@
             </EditText>
 
             <ImageButton
-                android:id="@+id/imageButton1"
+                android:id="@+id/dateButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignBottom="@+id/editTextFecha"
