--- a/app/src/main/res/layout/activity_formulario.xml
+++ b/app/src/main/res/layout/activity_formulario.xml
@@ -8,11 +8,22 @@
     android:descendantFocusability="beforeDescendants"
     android:focusableInTouchMode="true">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Datos del sujeto de pruebas"
+        android:textSize="24dp"
+        android:textStyle="bold"
+        android:id="@+id/formulario_titulo"
+        android:layout_marginLeft="4dp"
+        />
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:layout_editor_absoluteY="8dp"
-        tools:layout_editor_absoluteX="8dp">
+        tools:layout_editor_absoluteX="8dp"
+        android:layout_below="@+id/formulario_titulo">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -23,7 +34,7 @@
                 android:layout_height="wrap_content"
                 android:inputType="text"
                 android:ems="10"
-                android:id="@+id/nombre"
+                android:id="@+id/editTextNombre"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
@@ -35,8 +46,8 @@
                 android:layout_height="wrap_content"
                 android:inputType="text"
                 android:ems="10"
-                android:id="@+id/apellidos"
-                android:layout_below="@+id/nombre"
+                android:id="@+id/editTextApellidos"
+                android:layout_below="@+id/editTextNombre"
                 android:hint="Apellidos"
                 android:layout_marginTop="10dp"/>
 
@@ -47,7 +58,7 @@
                 android:layout_marginLeft="5dp"
                 android:textSize="20dp"
                 android:layout_marginTop="10dp"
-                android:layout_below="@+id/apellidos"
+                android:layout_below="@+id/editTextApellidos"
                 android:id="@+id/textview_fecha"
                 android:text="Fecha de nacimiento:" />
 
@@ -126,6 +137,18 @@
 
             </EditText>
 
+            <Button
+                android:id="@+id/InicioPrueba_Button"
+                android:layout_width="260dp"
+                android:layout_height="60dp"
+                android:layout_below="@+id/text_descripcion"
+                android:layout_marginTop="30dp"
+                android:text="Iniciar prueba"
+                android:textSize="18dp"
+                android:textColor="@color/white"
+                android:backgroundTint="@color/colorPrimary"
+                android:drawableRight="@drawable/ic_empezar"
+                android:layout_centerInParent="true"/>
 
 
             <!--<EditText-->
