--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,6 +31,15 @@
             android:src="@drawable/ic_add"
             app:borderWidth="0dp"/>
 
+        <Button
+            android:id="@+id/video_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/toolbar"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="98dp"
+            android:text="Grabar" />
+
     </RelativeLayout>
 
     <android.support.design.widget.NavigationView
