--- a/app/src/main/res/layout/activity_formulario.xml
+++ b/app/src/main/res/layout/activity_formulario.xml
@@ -115,6 +115,14 @@
 
             </RadioGroup>
 
+            <View
+                android:id="@+id/line1"
+                android:layout_width="wrap_content"
+                android:layout_height="1dip"
+                android:layout_marginTop="8dp"
+                android:background="#cacaca"
+                android:layout_below="@+id/radioGenero"/>
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -122,7 +130,7 @@
                 android:layout_marginLeft="5dp"
                 android:textSize="20dp"
                 android:layout_marginTop="10dp"
-                android:layout_below="@+id/radioGenero"
+                android:layout_below="@+id/line1"
                 android:id="@+id/TextViewMultimedia"
                 android:text="Opciones Multimedia:" />
 
@@ -160,6 +168,13 @@
 
             </RadioGroup>
 
+            <View
+                android:id="@+id/line2"
+                android:layout_width="wrap_content"
+                android:layout_height="1dip"
+                android:layout_marginTop="8dp"
+                android:background="#cacaca"
+                android:layout_below="@+id/radioMultimedia"/>
 
             <TextView
                 android:layout_width="match_parent"
@@ -168,7 +183,7 @@
                 android:layout_marginLeft="5dp"
                 android:textSize="20dp"
                 android:layout_marginTop="15dp"
-                android:layout_below="@+id/radioMultimedia"
+                android:layout_below="@+id/line2"
                 android:id="@+id/textview_descripcion"
                 android:text="Descripción:" />
 
