Inserción en BD
Implementada inserción del formulario con los datos iniciales de la experiencia en la base de datos de firebase. Éstos son creados dentro de una entrada con la fecha y horas de creación del formulario.

--- a/app/src/main/res/layout/activity_formulario.xml
+++ b/app/src/main/res/layout/activity_formulario.xml
@@ -101,14 +101,14 @@
                 android:orientation="vertical" >
 
                 <RadioButton
-                    android:id="@+id/radioButton1"
+                    android:id="@+id/radioFemenino"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Femenino"
                     android:checked="true" />
 
                 <RadioButton
-                    android:id="@+id/radioButton2"
+                    android:id="@+id/radioMasculino"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Masculino" />
