--- a/app/src/main/res/layout/activity_datos.xml
+++ b/app/src/main/res/layout/activity_datos.xml
@@ -1,29 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-    android:id="@+id/txtStep"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:text="@string/steps" />
+    <ScrollView
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true">
 
-    <Button
-    android:id="@+id/btnStart"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:text="@string/start" />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-    <TextView
-    android:id="@+id/txtStatus"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:text="" />
+            <TextView
+                android:id="@+id/txtStep"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/steps" />
 
-    <com.jjoe64.graphview.GraphView
-    android:layout_width="match_parent"
-    android:layout_height="200dip"
-    android:id="@+id/graph" />
+            <Button
+                android:id="@+id/btnStart"
+                android:layout_below="@+id/txtStep"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/start" />
 
-</LinearLayout>
+            <TextView
+                android:id="@+id/txtStatus"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/btnStart"
+                android:text="" />
+
+            <VideoView
+                android:id="@+id/videoview"
+                android:layout_below="@+id/txtStatus"
+                android:layout_width="wrap_content"
+                android:layout_height="200dp" />
+
+            <com.jjoe64.graphview.GraphView
+                android:layout_below="@+id/videoview"
+                android:layout_marginTop="20dp"
+                android:layout_width="match_parent"
+                android:layout_height="200dip"
+                android:id="@+id/graph" />
+
+        </RelativeLayout>
+
+    </ScrollView>
+
+</RelativeLayout>
