--- a/app/src/main/res/layout/activity_datos.xml
+++ b/app/src/main/res/layout/activity_datos.xml
@@ -34,7 +34,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:visibility="invisible"
-                android:text="Parar"
+                android:text="Terminar"
                 android:layout_below="@+id/txtStep"
                 android:layout_toEndOf="@+id/textView" />
 
@@ -60,7 +60,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/txtTemperatura"
-                android:layout_marginBottom="40dp"
+                android:layout_marginBottom="60dp"
                 android:text="" />
 
             <TextView
@@ -111,6 +111,7 @@
             <Chronometer
                 android:id="@+id/chronometer3"
                 android:visibility="invisible"
+                android:textSize="24dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
