--- a/app/src/main/res/layout/to_do_list.xml
+++ b/app/src/main/res/layout/to_do_list.xml
@@ -6,11 +6,14 @@
     android:paddingBottom="18dp"
     android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/task_title"
+    <Button
+        android:id="@+id/experiencia_title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="70"
+        android:layout_marginLeft="40dp"
+        android:layout_marginRight="40dp"
+        android:gravity="center"
         android:text="@string/app_name"
         android:textSize="16sp"
         android:textColor="#000000"/>
