--- a/app/src/main/res/layout/activity_nueva_experiencia.xml
+++ b/app/src/main/res/layout/activity_nueva_experiencia.xml
@@ -67,7 +67,8 @@
         android:layout_marginTop="20dp"
         android:paddingBottom="10dp"
         android:paddingTop="-10dp"
-        android:drawableBottom="@drawable/ic_adduser"
+        android:paddingRight="28dp"
+        android:drawableRight="@drawable/ic_adduser"
         android:text="" />
 
 </RelativeLayout>
