Nueva funcionalidad a la hora de Iniciar una experiencia de usuario
Ahora se inicia desde la vista en la que aparecen los datos de usuario

--- a/app/src/main/res/layout/activity_experiencia.xml
+++ b/app/src/main/res/layout/activity_experiencia.xml
@@ -116,4 +116,12 @@
         android:textStyle="bold"
         />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/textView6"
+        android:id="@+id/btnStartExperiencia"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
+        android:text="Iniciar Experiencia"/>
 </RelativeLayout>
