--- a/app/src/main/res/layout/activity_datos.xml
+++ b/app/src/main/res/layout/activity_datos.xml
@@ -94,13 +94,66 @@
                 android:layout_below="@+id/txtStep"
                 android:layout_toEndOf="@+id/textView" />
 
+
+            <ProgressBar
+                android:id="@+id/progressBar"
+                style="?android:attr/progressBarStyleHorizontal"
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="20dp"
+                android:layout_below="@+id/btnStop"
+                android:visibility="gone">
+            </ProgressBar>
+
+            <LinearLayout
+                android:id="@+id/layoutSubidaVideo"
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:gravity="center_vertical"
+                android:orientation="horizontal"
+                android:layout_below="@+id/progressBar"
+                android:layout_marginTop="15dp"
+                android:layout_marginBottom="-10dp">
+
+                <TextView
+                    android:id="@+id/textoLblSubirVideo"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="center_vertical|right"
+                    android:text="Subiendo vídeo... "
+                    android:visibility="gone"/>
+
+                <TextView
+                    android:id="@+id/txtSubidaVideo"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:textStyle="bold"
+                    android:gravity="center_vertical"
+                    android:text="" />
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/txtVideoSubidoExito"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:layout_marginBottom="-10dp"
+                android:gravity="center"
+                android:textStyle="bold"
+                android:layout_below="@+id/layoutSubidaVideo"
+                android:visibility="gone"
+                android:text="" />
+
             <TextView
                 android:id="@+id/txtGSR"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
                 android:layout_marginBottom="-10dp"
-                android:layout_below="@+id/btnStart"
+                android:layout_below="@+id/txtVideoSubidoExito"
                 android:text="" />
 
             <TextView
@@ -116,7 +169,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/txtTemperatura"
-                android:layout_marginBottom="60dp"
+                android:layout_marginBottom="20dp"
                 android:text="" />
 
             <TextView
