Grabación de Video implementada
Además, a la hora de realizar la prueba se comprueba el tipo(solo video, audio, etc)

--- a/app/src/main/res/layout/activity_formulario.xml
+++ b/app/src/main/res/layout/activity_formulario.xml
@@ -174,7 +174,7 @@
                     android:id="@+id/radioAudio"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Solo Audio" />
+                    android:text="Sólo Audio" />
 
                 <RadioButton
                     android:id="@+id/radioAudioYVideo"
