--- a/app/src/main/res/layout/activity_experiencia.xml
+++ b/app/src/main/res/layout/activity_experiencia.xml
@@ -21,7 +21,16 @@
         android:text="TextView" />
 
     <TextView
+        android:id="@+id/tipoPruebaInfoExperiencia"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/nombre"
+        android:layout_marginLeft="140dp"
+        android:layout_marginTop="30dp"
+        android:text="TextView" />
+
+    <TextView
+        android:layout_below="@+id/tipoPruebaInfoExperiencia"
         android:id="@+id/apellidos"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -113,6 +122,16 @@
         android:layout_alignTop="@+id/descripcion"
         android:layout_marginLeft="30dp"
         android:text="Descripción: "
+        android:textStyle="bold"
+        />
+
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/tipoPruebaInfoExperiencia"
+        android:layout_marginLeft="30dp"
+        android:text="Tipo de Prueba: "
         android:textStyle="bold"
         />
 
