Control de botones y del botón de back durante la prueba

--- a/app/src/main/res/layout/activity_datos.xml
+++ b/app/src/main/res/layout/activity_datos.xml
@@ -94,7 +94,6 @@
                 android:layout_below="@+id/txtStep"
                 android:layout_toEndOf="@+id/textView" />
 
-
             <ProgressBar
                 android:id="@+id/progressBar"
                 style="?android:attr/progressBarStyleHorizontal"
@@ -147,13 +146,23 @@
                 android:visibility="gone"
                 android:text="" />
 
+            <Button
+                android:id="@+id/btnVolverMenu"
+                android:layout_marginTop="20dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:visibility="invisible"
+                android:text="Volver al menú principal"
+                android:layout_below="@+id/txtVideoSubidoExito"
+                android:layout_centerHorizontal="true"/>
+
             <TextView
                 android:id="@+id/txtGSR"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
                 android:layout_marginBottom="-10dp"
-                android:layout_below="@+id/txtVideoSubidoExito"
+                android:layout_below="@+id/btnVolverMenu"
                 android:text="" />
 
             <TextView
