--- a/app/src/main/res/layout/activity_datos.xml
+++ b/app/src/main/res/layout/activity_datos.xml
@@ -227,13 +227,13 @@
 
             <Chronometer
                 android:id="@+id/chronometer3"
-                android:visibility="invisible"
-                android:textSize="24dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
                 android:layout_centerHorizontal="true"
-                android:layout_marginTop="223dp" />
+                android:layout_marginTop="365dp"
+                android:textSize="24dp"
+                android:visibility="invisible" />
 
         </RelativeLayout>
 
